--- a/ProcessLinkChecker.css
+++ b/ProcessLinkChecker.css
@@ -35,7 +35,6 @@
 
 .content p.description {
     margin: 1em 0 0.5em 0;
-    font-size: 0.9em;
 }
 
 .status {
@@ -83,9 +82,9 @@ button[name=check-now] {
 .link-crawler-container,
 .link-crawler-output {
     width: 100%;
-    height: 600px;
     color: #333;
     background: #fff;
+    max-height: 600px;
 }
 
 .link-crawler-container #title {
@@ -94,6 +93,7 @@ button[name=check-now] {
 
 .link-crawler-container {
     border: 0;
+    height: 600px;
     margin: 2em 0 0 0;
 }
 
@@ -101,9 +101,6 @@ button[name=check-now] {
     background: url('./loading.gif') 3em 0 no-repeat transparent;
 }
 
-.link-crawler-output {
-    padding: 1em;
-    display: none;
-    overflow: scroll;
-    border: 1px solid #ccc;
+.link-crawler-container.ready {
+    border: 1px solid #eee;
 }
