--- a/ProcessLinkChecker.css
+++ b/ProcessLinkChecker.css
@@ -3,6 +3,12 @@
     top: -2px;
 }
 
+.AdminDataTable tr td:nth-child(1),
+.AdminDataTable tr td:nth-child(2) {
+    width: 30%;
+    word-break: break-all;
+}
+
 .AdminDataTable tr a.action,
 .AdminDataTable tr span {
     display: inline-block;
