Another minor UI tweak

--- a/ProcessLinkChecker.css
+++ b/ProcessLinkChecker.css
@@ -99,7 +99,7 @@ button[name=check-now] {
     height: 3em;
     display: block;
     margin-top: 2em;
-    background: url('./loading.gif') 3em 0 no-repeat transparent;
+    background: url('./loading.gif') 0 0 no-repeat transparent;
 }
 
 .link-crawler-container.ready {
