--- a/ProcessLinkChecker.css
+++ b/ProcessLinkChecker.css
@@ -166,6 +166,7 @@ button[name=check-now] {
     color: #333;
     cursor: pointer;
     background: #eee;
+    white-space: nowrap;
 }
 
 #link-checker-dashboard .data th.header:before,
@@ -203,6 +204,10 @@ button[name=check-now] {
     cursor: help;
 }
 
+.data {
+    min-width: 275px;
+}
+
 .plot {
     clear: left;
 }
@@ -214,7 +219,7 @@ button[name=check-now] {
     margin-top: 1em;
 }
 
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 1260px) {
     #status-breakdown .data,
     #status-breakdown .plot {
         width: 50%;
@@ -227,11 +232,12 @@ button[name=check-now] {
     color: #fff;
     width: 22.5%;
     background: #fff;
+    line-height: 20px;
     border-radius: 3px;
     margin: 1em 3.33% 0 0;
     box-sizing: border-box;
     text-transform: uppercase;
-    padding: 1.5em 1.25em 1em 1.25em;
+    padding: 1.45em 1.15em 1em 1.15em;
 }
 
 .item:nth-child(4) {
@@ -276,12 +282,13 @@ button[name=check-now] {
     color: #fff;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.25);
     font-weight: bold;
-    font-size: 2em;
+    font-size: 24px;
     display: block;
 }
 
 .item small {
     opacity: 0.8;
+    font-size: 10px;
 }
 
 #status-breakdown .data tr td:first-of-type {
