--- a/ProcessLinkChecker.css
+++ b/ProcessLinkChecker.css
@@ -119,23 +119,19 @@ button[name=check-now] {
     background: #FFF9E1;
     position: relative;
     font-size: 12px;
-    width: 38px;
-    height: 40px;
     cursor: pointer;
     overflow: hidden;
+    padding: 1em 1em 1em 3em;
+}
+
+.help.closed {
+    width: 38px;
+    height: 40px;
     padding: 0 0 0 38px;
 }
 
-.help:hover {
+.help.closed:hover {
     opacity: 0.8;
-}
-
-.help.open,
-.help.open:hover {
-    opacity: 1;
-    width: auto;
-    height: auto;
-    padding: 1em 1em 1em 3em;
 }
 
 .help:before {
@@ -213,7 +209,7 @@ button[name=check-now] {
     margin-top: 1em;
 }
 
-.plot {
+.plot.jqplot-target {
     min-height: 365px;
 }
 
